--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Doctor-Booking-Appointment
+
+spring.datasource.url=jdbc:mysql://localhost:3306/doctor
+spring.datasource.username=root
+spring.datasource.password=facebook
+spring.jpa.hibernate.ddl-auto=update
